# ACT-Rainfall-Runoff-Modelling

./: .gitignore  AGENTS.md  APEX_GUIDE.md  APEX_NOTEBOOK_SUMMARY.md  CHANGELOG.md  IMPLEMENTATION_REPORT.md  LESSONS_LEARNT.md  README.md  TESTING.md  pyproject.toml  requirements.txt  sacramento.py  verification_report.md
.cursor/commands/: itemized-commits-audit.md  itemized-commits.md  sync-notebooks.md
.cursor/rules/: calibration-adapters.mdc  changelog-maintenance.mdc  ci-infrastructure.mdc  commit-messages.mdc  conda-environment.mdc  deployment-workflow.mdc  documentation-updates.mdc  hydrologist-persona.mdc  jupytext-notebooks.mdc  lessons-learnt.mdc  macmini-server.mdc  model-implementation.mdc  notebook-structure.mdc  pyrrm-agent-instructions.mdc  pyrrm-development.mdc  sceua-calibration.mdc  test-maintenance.mdc  version-control.mdc
.github/workflows/: ci.yml  tests.yml
benchmark/: __init__.py  generate_test_data.py  run_benchmark.py  verify_implementation.py  visualize_comparison.py
diagrams/: 00_master_journey.excalidraw  01_explorer_anatomy.excalidraw  02_vehicle_fleet.excalidraw  03_diagnostic_spectrum.excalidraw
docs/: APEX_CONSOLIDATION_SUMMARY.md  BMA_Specification_Document.md  compass_artifact_wf-0c950ade-b08e-4fc8-ae81-1e0c9459b73e_text_markdown.md  data_preparation.md  executive_summary_batch_network_runners.md  executive_summary_slide_deck_spec.md  jax_numpyro_mcmc_spec.md  pyrrm-cross-repo-agent-guide.md
notebooks/: 01_apex_complete_guide.py  01_sacramento_verification.ipynb  01_sacramento_verification.py  02_calibration_quickstart.ipynb  02_calibration_quickstart.py  03_objective_functions.ipynb  03_objective_functions.py  03_routing_quickstart.ipynb  03_routing_quickstart.py  04_algorithm_comparison.ipynb  04_algorithm_comparison.py  04_objective_functions.ipynb  04_objective_functions.py  04_routing_flow_range.py  04_routing_quickstart.py  05_algorithm_comparison.py  05_apex_complete_guide.ipynb  05_apex_complete_guide.py  05_calibration_monitor.ipynb  05_calibration_monitor.py  06_algorithm_comparison.ipynb  06_algorithm_comparison.py  06_calibration_monitor.py  06_model_comparison.ipynb  06_model_comparison.py  07_model_comparison.ipynb  07_model_comparison.py  08_calibration_monitor.ipynb  08_calibration_monitor.py  08_calibration_reports.py  09_calibration_reports.ipynb  09_calibration_reports.py  10_batch_runners.py  10_executive_summary.py  11_batch_and_network_runners.py  11_batch_runners.py  11_network_runners.py  12_network_runners.py  12_nuts_calibration.py  13_nuts_calibration.py  (+2 more)
other/: Sacramento.cs
pyrrm/: __init__.py  parallel.py
pyrrm-gui/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
specifications/: hydro_objectives_specification.md  nonlinear_muskingum_routing_specification.md
test_data/: calibrated_parameters_comparison.csv  calibrated_params_sce-ua.csv  calibration_summary.csv  csharp_output_TC01_default.csv  csharp_output_TC02_dry.csv  csharp_output_TC03_wet.csv  csharp_output_TC04_impervious.csv  csharp_output_TC05_groundwater.csv  csharp_output_TC06_uh.csv  csharp_output_TC07_zero_rain.csv  csharp_output_TC08_storm.csv  csharp_output_TC09_full_stores.csv  csharp_output_TC10_dry_spell.csv  gauge_410734_inputs.csv  long_dry_spell_inputs.csv  parameter_sets.json  python_output_TC01_default.csv  python_output_TC02_dry.csv  python_output_TC03_wet.csv  python_output_TC04_impervious.csv  python_output_TC05_groundwater.csv  python_output_TC06_uh.csv  python_output_TC07_zero_rain.csv  python_output_TC08_storm.csv  python_output_TC09_full_stores.csv  python_output_TC10_dry_spell.csv  quickstart_calibrated_params.csv  storm_event_inputs.csv  synthetic_inputs.csv  zero_rainfall_inputs.csv
(+366 files in other folders)
